/**
 * Copyright 2017-2022 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/* service definition */

syntax = "proto3";
option java_package = "cz.o2.proxima.beam.tools.proto.service";

message Item {
  bytes serialized = 1;
}

message Response {
  int32 status = 1;
  string statusCode = 2;
}

/**
 * Collect service collects data from remote producers into the console.
 */
service CollectService {
  rpc collect(stream Item) returns (stream Response);
}
